--- a/.github/workflows/upload_episode.yml
+++ b/.github/workflows/upload_episode.yml
@@ -26,11 +26,14 @@ jobs:
           sudo apt-get install -y ffmpeg wget unzip
 
           # ✅ התקנה מחדש של Puppeteer בצורה תקינה
-          npm uninstall puppeteer --global || true
           npm install puppeteer --global
 
           # ✅ בדיקה אם Puppeteer מותקן כמו שצריך
-          node -e "console.log(require.resolve('puppeteer'))" || exit 1
+          if ! node -e "require.resolve('puppeteer')"; then
+            echo "❌ Puppeteer installation failed!"
+            exit 1
+          fi
+          echo "✅ Puppeteer installed successfully."
 
       # ✅ יצירת `cookies.txt` מתוך GitHub Secrets
       - name: Create cookies.txt from GitHub Secrets
