--- a/.github/workflows/upload_episode.yml
+++ b/.github/workflows/upload_episode.yml
@@ -74,12 +74,12 @@ jobs:
             exit 1
           fi
           
-      # ✅ העלאת הסרטון ל-Spotify תוך שימוש בנתיב Puppeteer
-      - name: Upload Video Episode to Spotify (Using Puppeteer)
+# ✅ העלאת הסרטון ל-Spotify תוך שימוש בנתיב הנכון של Chrome
+      - name: Upload Video Episode to Spotify (Using Cookies)
         uses: ./
         env:
-          SPOTIFY_EMAIL: "${{ secrets.SPOTIFY_EMAIL }}"
-          SPOTIFY_PASSWORD: "${{ secrets.SPOTIFY_PASSWORD }}"
-          EPISODE_PATH: "/github/workspace"
+          SPOTIFY_EMAIL: ${{ secrets.SPOTIFY_EMAIL }}
+          SPOTIFY_PASSWORD: ${{ secrets.SPOTIFY_PASSWORD }}
+          EPISODE_PATH: /github/workspace
           YOUTUBE_COOKIES_PATH: "/github/workspace/cookies.txt"
           PUPPETEER_EXECUTABLE_PATH: "$(node -e "console.log(require('puppeteer').executablePath())")"
