--- a/.github/workflows/upload_episode.yml
+++ b/.github/workflows/upload_episode.yml
@@ -69,8 +69,8 @@ jobs:
           echo "✅ Puppeteer and Chrome installed successfully!"
 
       # ✅ העלאת הסרטון ל-Spotify תוך שימוש ב-Puppeteer
-      - name: Upload Video Episode to Spotify (Using Puppeteer)
-        uses: Schroedinger-Hat/youtube-to-spotify@v2.5.0
+      - name: Upload Video Episode to Spotify (Using Cookies)
+        uses: ./
         env:
           SPOTIFY_EMAIL: ${{ secrets.SPOTIFY_EMAIL }}
           SPOTIFY_PASSWORD: ${{ secrets.SPOTIFY_PASSWORD }}
