--- a/.github/workflows/upload_episode.yml
+++ b/.github/workflows/upload_episode.yml
@@ -24,6 +24,12 @@ jobs:
           pip install yt-dlp
           sudo apt update && sudo apt install -y google-chrome-stable ffmpeg
 
+      - name: Install Puppeteer with Built-in Chrome
+        run: |
+        npm install puppeteer@latest
+        npx puppeteer browsers install chrome
+
+
       # ✅ יצירת `cookies.txt` מתוך GitHub Secrets
       - name: Create cookies.txt from GitHub Secrets
         run: |
