--- a/.github/workflows/upload_episode.yml
+++ b/.github/workflows/upload_episode.yml
@@ -22,9 +22,9 @@ jobs:
       - name: Install Dependencies
         run: |
           pip install yt-dlp
-          sudo add-apt-repository -y ppa:savoury1/ffmpeg4  # ✅ מתקין FFmpeg עם תמיכה בגרסאות חדשות
           sudo apt-get update
-          sudo apt-get install -y ffmpeg
+          sudo apt-get install -y snapd
+          sudo snap install ffmpeg  # ✅ מתקין FFmpeg מ-Snap (פתרון שעובד תמיד!)
           npm install puppeteer@latest  # ✅ מתקין Puppeteer עם Chromium מובנה!
 
       # ✅ יצירת `cookies.txt` מתוך GitHub Secrets
